# InvestJelly

./: .breakpoints  .gitignore  .replit  DBBuilder.py  DBUpdateExample.py  README.md  Structures.py  UpdateCode.py  ig.gitignore  pyproject.toml  testCode.py
DB/: Bithumb.py  Crypto.py  CryptoDBUpdater.py  DBBuilder.py  Modules.py  __init__.py
DB/Readers/: Bithumb.py
DB/Updaters/: Bithumb.py
Structures/: ChartBased.py  Indicators.py  __init__.py
Trade/: Agent.py  Environment.py  Trader.py
Visual/: Chart.py
