[tool.poetry]
name = "repl_python3_InvestJelly"
version = "0.1.0"
description = ""
authors = ["jellyho <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "^1.0.2"
pytz = "^2021.3"
pandas = "^1.3.4"
pybithumb = "^1.0.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
